Wiring of the Corpus Structure Adapter and old AMS2 for new CMDI/IMDI configuration.